--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,381 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* ### Services Page ### */
+
+#services header {
+
+	display: block;
+}
+
+#services header, #services section {
+	display: block;
+	width: 90%;
+	margin: 0 auto;
+}
+
+#services header img {
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+#services h1 {
+	text-align: start;
+	font-size: 250%;
+}
+
+#services .main {
+	margin: 5% auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	border-bottom: 1px solid black;
+}
+
+#services .item {
+	width: 48%;
+	background-color: lightgrey;
+	padding: 15px;
+	border: 1px solid black;
+	margin-bottom: 20px;
+}
+
+#services .services-more {
+	display: flex;
+	justify-content: space-between;
+}
+.services-more div {
+	width: 48%;
+}
+
+#services footer {
+	display: flex;
+	justify-content: center;
+	align-content: flex-end;
+	margin-top: 10%;
+	margin-bottom: 0px;
+}
+
+#services button {
+	margin: 5px;
+}
+
+.services-more li {
+	list-style-type: circle;
+	line-height: 1.4;
+}
+
+.services-more ul {
+	margin-left: 20px;
+}
+
+/* ### Homepage/Main Styles ### */
+
+.header, .middle-img, .first, .second, .third, footer {
+	display: block;
+	width: 90%;
+	margin: 0 auto;
+}
+
+p {
+	font-size: 1.4em;
+	margin-bottom: 15px;
+}
+
+/* NAV STYLES */
+
+nav {
+
+	width: 100%;
+	padding: 20px;
+	display: flex;
+}
+
+nav .links {
+	width: 70%; 
+	display: flex;
+}
+
+nav .logo {
+    width: 10%;
+}
+
+nav a, nav img {
+	align-content: baseline;
+	justify-content: space-between;
+}
+
+nav a {
+	text-decoration: none;
+	color: black;
+	font-size: .9rem;
+	text-align: center;
+	justify-content: space-around;
+	width: 15%;
+	align-content: center;
+	padding: 1%;
+}
+
+
+nav img {
+	margin-left: 5%;
+	text-align: center;
+}
+
+/* HEADER STYLES */
+
+header {
+	padding-top: 5%;
+	padding-bottom: 8%;
+	border-bottom: 1px black solid;
+	display: flex;
+}
+
+header .left, header .right {
+	/* display: inline-block; */
+	width: 48%;
+	vertical-align: middle;
+}
+
+header div img {
+	display: block;
+	margin: 0 auto;
+}
+
+button {
+	display: block;
+	padding: 2% 10%;
+	width: 40%;
+	margin: 0 auto;
+}
+
+h1 {
+	margin-top: 4%;
+	font-size: 5rem;
+	text-align: center;
+}
+
+/*  FIRST SECOND AND THIRD ROWS */
+
+.first, .second, .third {
+
+	margin: 5% auto;
+}
+
+.first, .second {
+	display: flex;
+}
+
+.first div {
+	width: 48%;
+	/* display: inline-block; */
+}
+
+.first div:first-child {
+	margin-right: 3%;
+}
+
+.second {
+	border-bottom: 1px solid black;
+}
+
+.second div {
+	/* display: inline-block; */
+	width: 32%;
+}
+
+.second div:first-child, .second div:nth-child(2) {
+	margin-right: 1.5%;
+}
+
+.third span {
+	line-height: 3;
+}
+
+/* FOOTER */
+
+footer {
+	margin-bottom: 10%;
+}
+
+footer p {
+	text-align: center;
+}
+
+
+/* ### MOBILE LAYOUT ### */
+
+
+/* Tablet */
+
+@media (max-width: 800px) {
+    
+    nav {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    nav .logo {
+        width: 100%;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        
+    }
+
+    nav img {
+        margin-left: 0px;
+    }
+
+    nav .links {
+        width: 100%;
+    }
+
+    .home .right {
+        display: none;
+    }
+
+    .home .left {
+        justify-content: center;
+        width: 100%;
+    }
+
+    .mainCta {
+        background-color: white;
+        border: 1px solid black;
+        font-family: 'Titillium Web', sans-serif;
+        width: auto;
+        padding: 1% 5%;
+    }
+
+
+}
+
+@media only screen and (max-width: 500px) {
+    nav {
+        padding: 0;
+    }
+
+    nav .logo {
+        border-bottom: 1px solid black;
+        margin-bottom: 0;
+        padding: 20px  0;
+    }
+    
+    .links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .links a {
+        padding: 4% 0;
+        width: 100%;
+        border-bottom: 1px solid black;
+        font-size: 1.2em;
+        color: grey;
+    }
+
+	#services .item {
+		width: 100%;
+	}
+
+	.services-more {
+		flex-direction: column-reverse;
+	}
+
+	.services-more div {
+		width: 100%;
+		margin: 20px auto;
+	}
+
+	.first, .second {
+		flex-direction: column;
+	}
+
+	.first div, .second div, .home {
+		width: 100%;
+	}
+
+	.home {
+		display: flex;
+		flex-direction: column-reverse;
+		width: 100%;
+	}
+
+	.home div {
+		justify-content: flex-end;
+		align-content: center;
+		width: 80%;
+		margin: 5%;
+	}
+	
+
+  }
 
 
